修正：通用表單頁面路由異常問題 新增：通用表單的共用類別增加提供子類別元件繼承使用的釋放流程的覆寫方法 修正：Dialog 的重置按鈕觸發 ErrorLog 問題(原因為因為 FormControl 已經定義，不能再次更改) 新增：各頁面資料表元件的 CURD 模擬功能

--- a/src/app/controls/form-controls/form-controls.component.html
+++ b/src/app/controls/form-controls/form-controls.component.html
@@ -7,7 +7,7 @@
           <!-- Input Type  -->
           <!-- 改為 FormControl 作法，就變成只需要傳 formControlName 即可 -->
           <app-keydown-input
-            *ngSwitchCase="cType.KeydownInput"
+            *ngSwitchCase="cType.KeywordInput"
             formControlName="{{ item.id }}"
             [controlItem]="item"
           ></app-keydown-input>
